--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -33,7 +33,7 @@ jobs:
     #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest tests/ --cov=genie --cov=genie_registry --cov-report=html
+        pytest tests/ --cov=synapsegenie --cov-report=html
     - name: Upload pytest test results
       uses: actions/upload-artifact@v2
       with:
