--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering
 project_urls =
     Bug Tracker = https://github.com/Sage-Bionetworks/synapsegenie/issues
@@ -30,9 +31,9 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    synapseclient>=2.5.1
+    synapseclient>=2.6.0
     pandas>=1.0
-python_requires = >=3.7, <3.10
+python_requires = >=3.7, <=3.10
 include_package_data = True
 zip_safe = False
 
