--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ packages = find:
 install_requires =
     synapseclient>=2.6.0
     pandas>=1.0
-python_requires = >=3.7, <=3.10*
+python_requires = >=3.7, <3.11
 include_package_data = True
 zip_safe = False
 
