Update cli to synapsegneie

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ zip_safe = False
 
 [options.entry_points]
 console_scripts =
-    genie = synapsegenie.__main__:main
+    synapsegenie = synapsegenie.__main__:main
 
 [flake8]
 max-line-length = 88
